tools/crates/vendor/toml_edit/tests/fixtures/invalid/bool/almost-true.stderr
TOML parse error at line 1, column 27
  |
1 | almost-true             = tru
  |                           ^
invalid string
expected `"`, `'`
